# cailculator-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  DAY1_CHECKLIST.md  DIMENSIONAL_SUPPORT.md  DUAL_FRAMEWORK_GUIDE.md  LAUNCH_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY_v0.2.0.md  RESEARCH_METHODOLOGY.md  demo_zdtp.py  pyproject.toml  start_http_server.bat  start_http_server.sh  test_all_mcp_tools.py  test_all_visualizations.py  test_calculator.py  test_complete.py  test_e8_zero_divisors.py  test_high_dimensions.py  test_new_visualizations.py  test_patterns.py  test_transform.py  test_transform_ready.py  test_visualizations.py
.claude/: settings.local.json
assets/: README.md
assets/templates/: plot_config.json
auth-server/: database.py  init_db.py  requirements.txt  webhook_handler.py
auth_server/: .env.example  README.md  database.py  main.py  migrate_db.py  requirements.txt
auth_server/templates/: index.html  signup_free.html  success.html  verification_result.html
examples/: README.md  create_examples.py  visualization_demo.py
scripts/: setup_stripe_premium.py
src/cailculator_mcp/: __init__.py  auth.py  clifford_algebras.py  clifford_verified.py  config.py  e8_utils.py  patterns.py  server.py  tools.py  transforms.py
tests/: test_clifford_integration.py
