[project]
name = "cailculator-mcp"
version = "0.2.0"
description = "CAILculator MCP Server - High-dimensional data analysis with dual algebra frameworks for Claude"
authors = [{name = "Paul Chavez", email = "paul@chavezailabs.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=0.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",        # Network graph visualizations for zero divisor interactions
    "hypercomplex>=0.3.4",  # Cayley-Dickson algebras for zero divisor calculations
    "clifford>=1.5.0",      # Geometric/Clifford algebras - alternative framework for zero divisors
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
premium = [
    "plotly>=5.18.0",
    "kaleido>=0.2.1",  # For static image export from plotly
]
web = [
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://cailculator.com"
Documentation = "https://docs.cailculator.com"
Repository = "https://github.com/pchavez2029/cailculator-mcp"
Issues = "https://github.com/pchavez2029/cailculator-mcp/issues"

[project.scripts]
cailculator-mcp = "cailculator_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
